test commit from private mac

--- a/index.html
+++ b/index.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>TEST</h1>
     <p>Testing gh connection</p>
     <p>some more changes</p>
-</body>
-
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius velit quos,
+      laudantium architecto rem ab ratione laborum quae qui neque reprehenderit
+      aspernatur quasi dicta corrupti minus quis magni quibusdam officia,
+      mollitia expedita, repellendus sit alias. Deserunt aperiam ex fugiat dicta
+      doloremque architecto unde saepe a velit nostrum minus accusantium
+      asperiores qui pariatur ullam tenetur, officiis adipisci eos! Ipsa cumque
+      accusamus nam voluptatibus voluptates. Labore omnis blanditiis tenetur
+      accusamus recusandae error repellat iusto debitis modi. Pariatur quas
+      perspiciatis mollitia in explicabo a dolorem incidunt assumenda tempore
+      iure odio sunt dicta, architecto quisquam quam nobis nemo ullam corporis
+      repellat. Repudiandae quasi molestiae autem sed fuga voluptatibus magni
+      ipsum veritatis recusandae, assumenda tenetur ipsa maiores incidunt earum
+      soluta quibusdam? Quae officia, maxime fugiat repellendus, ut aspernatur
+      quaerat neque non unde eum ratione? Repudiandae praesentium repellat
+      atque, nesciunt, deserunt a commodi temporibus consectetur vel quasi
+      reprehenderit quisquam pariatur incidunt eum aspernatur eius vitae
+      numquam!
+    </p>
+  </body>
 </html>
